--- a/index.css
+++ b/index.css
@@ -9,21 +9,32 @@
   --error-color: #d9534f;
 }
 
+
 * {
   box-sizing: border-box;
   padding : 0;
-  margin: 0;
+  margin: 0px;
+  
+}
+
+#genreID {
+  background-color: white;
+
+}
+
+.ui-btn.ui-icon-carat-d.ui-btn-icon-right.ui-corner-all.ui-shadow {
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
-  color: #333;  
-  /* line-height: 1.6; */
+  /* font-family: 'Lato', sans-serif; */
+  font-family: "Roboto Slab", serif;
 }
 
 a {
     text-decoration: none;
-    color: #333;
+    color:white;
   
 }
 
@@ -31,10 +42,12 @@ h1, h2 {
   font-weight: 300px;
   line-height: 1.2;
   margin: 10px 0;
+  color: white
 }
 
 p {
   margin: 10px 0;
+  color: white
 }
 
 .moviesList {
@@ -44,18 +57,25 @@ p {
   flex-wrap: wrap;
   margin-top: 40px;
 }
+#movieBox {
+  border-radius: 2%;
+  
+}
 
 .moviesList .box {
   width: 340px;
   margin: 20px;
-  border: 15px solid #fff;
-  box-shadow: 0 5px 35px rgba(0,0,0,0.08);
+  box-shadow: 0 5px 35px rgb(255, 255, 255, 0.8);
+
+
 }
+
 
 .moviesList .box .imgBox {
   position: relative;
   width: 100%;
   height: 400px;
+ 
 }
 
 .moviesList .box .imgBox img {
@@ -65,6 +85,7 @@ p {
   width: 100%;
   height:100%;
   object-fit: cover;
+  border-radius: 2%;
 }
 
 .moviesList .box .text {
@@ -74,9 +95,68 @@ p {
 .moviesList .box .text h2 {
   font-style: oblique;
   font-weight: bolder;
+  text-align: center;
 }
 
 .moviesList .box .text p {
-  font-weight: 400;
-  color: #111;
+  color: white;
+  font-weight: lighter;
+  text-align: center;
+  font-size: 13px
+}
+
+.search {
+  text-align: center;
+  margin-right: 10%;
+  margin-left: 10%;
+
+}
+
+.showcase-text {
+  padding: 20px;
+  
+}
+.ui-page.ui-page-theme-a.ui-page-active{
+  background-color: black;
+}
+
+/* div {
+  background-color: black;
+} */
+
+#range-1a-label{
+  text-shadow: none;
+  color: white
+}
+
+#chooseGenre {
+  text-shadow: none;
+  color: white
+}
+
+.text{
+  overflow: hidden;
+
+}
+
+/* #submitButton{
+  margin-left: 70%;
+  margin-right: 70%;
+} */
+
+.ui-btn.ui-input-btn.ui-corner-all.ui-shadow{
+  margin-left: 45%;
+  margin-right: 45%
+}
+
+.ui-btn.ui-input-btn.ui-corner-all.ui-shadow:hover{
+  font-size: 110%;
+  opacity: 1;
+  letter-spacing: 1px;
+  transition: 0.1s
+
+}
+#submitButton:hover {
+  background-color: #047aed;
+  opacity: .2
 }
