--- a/index.css
+++ b/index.css
@@ -123,3 +123,7 @@ p {
   background-color: #047aed;
   opacity: .2
 }
+
+.moviesList .box:hover {
+  box-shadow: 0 5px 35px rgb(255, 255, 255, 1);
+}
