--- a/index.css
+++ b/index.css
@@ -43,6 +43,8 @@ p {
   flex-direction: row-reverse;
   flex-wrap: wrap;
   margin-top: 40px;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 #movieBox {
   border-radius: 2%;
@@ -84,6 +86,7 @@ p {
   text-align: center;
   margin-right: 10%;
   margin-left: 10%;
+  padding-bottom: 1%;
 }
 .showcase-text {
   padding: 20px;
@@ -110,8 +113,9 @@ p {
   margin-right: 70%;
 } */
 .ui-btn.ui-input-btn.ui-corner-all.ui-shadow{
-  margin-left: 45%;
-  margin-right: 45%
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+  min-width: 300px;
 }
 .ui-btn.ui-input-btn.ui-corner-all.ui-shadow:hover{
   font-size: 110%;
@@ -126,4 +130,12 @@ p {
 
 .moviesList .box:hover {
   box-shadow: 0 5px 35px rgb(255, 255, 255, 1);
+}
+
+#buttonContainer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-height: 100px;
 }
